...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
...

                <EditText
                    android:id="@+id/nazivET"
                    android:layout_width="0dp"
                    android:layout_weight="1"
...

                <EditText
                    android:id="@+id/porodicaET"
                    android:layout_width="0dp"
                    android:layout_weight="1"
...

            <TextView
                android:id="@+id/latinskiNazivError"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
...

            <EditText
                android:id="@+id/medicinskoUpozorenjeET"
                android:layout_width="match_parent"
                android:layout_height="45dp"
...

            <EditText
                android:id="@+id/jeloET"
                android:layout_width="match_parent"
                android:layout_height="45dp"
...

            <ListView
                android:id="@+id/profilOkusaLV"
                android:layout_width="match_parent"
                android:layout_height="395dp"
...

            <TextView
                android:id="@+id/profilOkusaError"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
...

            <ListView
                android:id="@+id/medicinskaKoristLV"
                android:layout_width="match_parent"
                android:layout_height="295dp"
...

            <TextView
                android:id="@+id/medicinskaKoristError"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
...

            <ListView
                android:id="@+id/klimatskiTipLV"
                android:layout_width="match_parent"
                android:layout_height="295dp"
...

            <TextView
                android:id="@+id/klimatskiTipError"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
...

            <ListView
                android:id="@+id/zemljisnjiTipLV"
                android:layout_width="match_parent"
                android:layout_height="295dp"
...

            <TextView
                android:id="@+id/zemljisniTipError"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
...

            <TextView
                android:id="@+id/praznaListaJelaError"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
...

            <TextView
                android:id="@+id/duplikatJelaError"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
...

            <Button
                android:id="@+id/dodajJeloBtn"
                android:layout_width="180dp"
                android:layout_height="55dp"
...

                <Button
                    android:id="@+id/dodajBiljkuBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
...

                <Button
                    android:id="@+id/uslikajBiljkuBtn"
                    android:layout_height="55dp"
                    android:layout_marginTop="5dp"
...

            <ImageView
                android:id="@+id/slikaIV"
                android:layout_width="300dp"
                android:layout_height="250dp"
...
